--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "private": true,
   "main": "./src/index.ts",
+  "scripts": {
+    "typecheck": "tsc --project ./tsconfig.json --noEmit"
+  },
   "dependencies": {
     "typescript": "^5.0.4"
   }
