--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,9 @@
   "name": "@wanted/ui",
   "packageManager": "yarn@3.5.1",
   "main": "src/index.ts",
+  "scripts": {
+    "typecheck": "tsc --project ./tsconfig.json --noEmit"
+  },
   "devDependencies": {
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.4",
